updated anon game name and docs for creating team
